--- a/r5dev/resource/cfg/autoexec_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_dev.cfg
@@ -14,19 +14,7 @@ net_processTimeBudget        "0" // Net message process budget in milliseconds (
 net_usesocketsforloopback    "1" // Whether to use network sockets layer for packets.
 
 //////////////////////////
-//// FILESYSTEM       ////
-//////////////////////////
-fs_warning_level_native      "0" // Sets SDK file system warning level.
-
-//////////////////////////
-//// MATSYS           ////
-//////////////////////////
-mat_showdxoutput             "1" // Shows debug information from the DirectX hook system.
-
-//////////////////////////
 //// SQUIRREL         ////
 //////////////////////////
-sq_showrsonloading           "1" // Shows the global include files the SQVM is loading for loading scripts.
-sq_showscriptloading         "0" // Shows the script files the SQVM is loading for precompile job.
-sq_showvmoutput              "3" // Shows the VM output. 1 = Log to file. 2 = 1 + log to console. 3 = 1 + 2 + log to overhead console. 4 = only log to overhead console.
-sq_showvmwarning             "2" // Shows the VM warning output. 1 = Log to file. 2 = 1 + log to console.
+script_show_output           "2" // Shows the VM output.
+script_show_warning          "2" // Shows the VM warning output.
